src/css/styles.scss
$primary-font: "Quicksand",
sans-serif;
$bold-font: "Sulphur Point",
sans-serif;

$blue: #5B7894;
$bright-green: #C4EB67;
$dark-green: #359567;
$white: #fff;

@mixin flex($dir) {
  display: flex;
  flex-direction: $dir;
  justify-content: center;
}

body {
  background-color: $blue;
  display: grid;
  font-family: $primary-font;
  grid-template-columns: 1fr 5fr;
  grid-template-areas:
    "header header"
    "image image"
    "aside main";
  height: 100vh;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: auto;
}

h1 {
  align-self: center;
  color: $white;
  font-family: $bold-font;
  font-size: 50px;
  margin: 0%;
  padding: 0.5% 0.7% 0%;
  width: 70%;
}

h2 {
  color: $dark-green;
  margin: 10px 0px 10px 0px;
}

h3 {
  color: $dark-green;
  cursor: pointer;
  height: 17%;
  margin: 5px 5px 10px 0px;
  transition: .8s ease;
}

h4 {
  color: $dark-green;
  background-color: $bright-green;
  border-radius: 3px;
  margin: 10px 0px 0px 0px;
  padding: 1px 4px 1px 4px;
  width: max-content;
}


/* HEADER */
header {
  @include flex(row);
  grid-area: header;
  padding: 0% 0%;
  width: 100%;
}

span {
  color: $bright-green;
  font-weight: 400;
}

.header-apple-icon {
  height: 40px;
  margin-left: 5px;
  width: 35px;
}

#search {
  @include flex(row);
  border-radius: 15px 15px 15px 15px;
  border: 3px outset $bright-green;
  box-shadow: 0px 0px 7px 0px $blue;
  font-family: $primary-font;
  margin: 1.2% 0.5% 1.2% 0%;
  width: 100%;
  
  #search-input {
    background-color: #b6dcca;
    background: -webkit-gradient( linear,left top, left bottom, color-stop(0, rgb(255, 255, 255)), color-stop(1, rgb(225,225,225)));
    border-radius: 10px 0px 0px 10px;
    border: none;
    box-shadow: inset -3px -1px 20px 1px $blue;
    color: $blue;
    font-family: $primary-font;
    font-size: 42px;
    height: 100%;
    outline: none;
    padding: 0% 2% 0% 0%;
    text-align: right;
    transition: .8s ease;
    width: 100%;
    
    &:hover {
      box-shadow: inset 0px 0px 0px 0px $white;
      transition: .8s ease;
      
      
    &:focus {
      box-shadow: inset 0px 0px 0px 0px $white;
      }
    }
  }
}
  
#search-input::placeholder {
  color: $blue;
  font-size: 20px;
  text-align: right;
  text-shadow: none;
}

#search-input:focus::placeholder {
  font-size: 0px;
  transition: .8s ease;
}

.search-label {
  display: none;
}

.search-btn {
  border-left: 3px outset $bright-green;
  border-radius: 0px 15px 15px 0px;
  padding: 1%;
}

.nav-btn {
  @include flex(column);
  align-items: center;
  background: $blue no-repeat;
  border: none;
  cursor: pointer;
  font-size: 0px;
  font-weight: 700;
  margin: 1% 0%;
  padding: 1px 6px 5px 0px;
  outline: none;
  overflow: hidden;
  text-align: center;
  transition: .4s ease;
  width: 15%;
    
  &:hover {
      color: $bright-green;
      font-size: 14px;
      text-shadow: 0px 2px 4px black;
      transition: .4s ease;
    
  
  }
}

.nav-btn {
  img {
    max-height: 40px;
    max-width: 40px;
    padding: 2px 0px;
  }
}

.my-pantry-btn {
  border-left: 3px solid $bright-green;
}

/* BANNER IMAGE*/
.banner-image {
  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),url("../images/green-apples.jpg");
  grid-area: image;
  height: 150px;
  overflow: hidden;
  width: 100%;
}

.my-recipes-banner,
.welcome-msg {
  text-align: center;
  width: 95%;
}

.my-recipes-banner h1,
.welcome-msg h1 {
  color: $white;
  width: 100%;
}

.my-recipes-banner {
  display: none;
  margin-top: 25px;
}

.welcome-msg {
  margin-top: 50px;
}


/* FILTER SIDEBAR */
aside {
  background-color: $white;
  @include flex(row);
  height: auto;
  text-align: center;
}

.wrap {
  background-color: $white;
  height: 100vh;
  padding: 10px;
  position: relative;
  width: 200px;
}

ul {
  list-style-type: none;
  text-align: left;
  padding-left: 35px;
}

li {
  margin: 2px;
}


/* RECIPE CARD SECTION */
main {
  grid-area: main;
  @include flex(row);
  align-content: flex-start;
  flex-wrap: wrap;
}

.recipe-card {
  background-color: $white;
  border: 2px solid $bright-green;
  border-radius: 7px;
  cursor: pointer;
  height: 270px;
  margin: 20px;
  padding: 15px;
  width: 250px;
}

.recipe-card:hover .card-photo-preview {
  opacity: 50%;
  transition: .8s ease;
}

.recipe-card:hover .text {
  font-size: 20px;
  opacity: 100%;
  transition: .5s ease;
  width: 100%;
}

.recipe-card:hover h3 {
  text-shadow: 0px 0px 4px $bright-green;
  transition: .8s ease;
}

.card-apple-icon {
  cursor: pointer;
  float: right;
  height: 50px;
  padding-bottom: 10px;
  width: 45px;
}

.card-photo-preview {
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 7px;
  cursor: pointer;
  height: 130px;
  transition: .8s ease;
  width: 100%;
}

.card-photo-container {
  @include flex(row);
  align-items: center;
  height: 130px;
  position: relative;
}

.text {
  background: $dark-green;
  color: $white;
  font-weight: 700;
  font-size: 0px;
  opacity: 0%;
  padding: 0%;
  position: absolute;
  text-align: center;
  width: 0%;
  transition: .5s ease;
}


/* BUTTONS */
.square-btns {
  background-color: $dark-green;
  border: 0;
  border-radius: 3px;
  color: $white;
  cursor: pointer;
  font-family: $primary-font;
  font-size: 12pt;
  font-weight: bold;
  padding: 5px 10px 5px 10px;
  height: 40px;
  margin-top: 20px;
  width: 200px;


  &:hover {
    background-color: $bright-green;
    color: $dark-green;
  }
}

/* PANTRY LIST */
.drop-menu {
  align-items: center;
  background-color: $white;
  display: none;
  height: 600px;
  margin-left: 81%;
  margin-top: 92px;
  overflow: scroll;
  padding: 12px;
  position: absolute;
  text-align: center;
  width: 250px;
  z-index: 3;
  
  h2 {
    color: $dark-green;
    margin: 0px;
  
  .pantry-list {
    padding-left: 15px;
    text-align: left;
  }
  }
}


/* RECIPE INSTRUCTIONS */
.recipe-instructions {
  background: $white;
  border: 3px solid $bright-green;
  border-radius: 10px;
  box-shadow: 1px 1px 115px black;
  display: none;
  height: 70%;
  margin: 0;
  overflow-x: scroll;
  padding: 1% 1% 1% 1%;
  position: fixed;
  right: 15%;
  top: 15%;
  width: 70%;
  z-index: 1000;

  h4 {
    background: $white;
    color: $dark-green;

  p {
    margin-left: 2%;

  ol {
    margin-right: 2%;   
      }
    }
  }
}

  #exit-recipe-btn {
    background: $white;
    border: 2px double $dark-green;
    border-radius: 5px;
    color: $dark-green;
    cursor: pointer;
    font-size: 20px;
    font-weight: 700;
    margin: -4% -3% 2% -1%;
    position: fixed;
    transition: .3s ease;

    &:hover {
      background: $bright-green;
      transition: .3s ease;
    }
  }

#recipe-title {
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 7px 7px 0px 0px;
  color: $white;
  font-size: 30px;
  margin: 0;
  padding: 5%;
  text-align: center;
  text-shadow: 0px 0px 6px black;
}

#overlay {
  filter:alpha(opacity=50);
  background-color: $blue;
  height:100%;
  left:0;
  opacity:0.5;
  position:fixed;
  top:0;
  width:100%;
  z-index:100;
}

